syntax = "proto3";
package palomachain.paloma.evm;

option go_package = "github.com/palomachain/paloma/x/evm/types";

message RemoveChainProposal {

  string title = 1;
  string description = 2;
  string chainReferenceID = 3;
}
